--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,6 @@ h1 a {
   text-align: center;
 } */
 
-.img {
-  height: 100%;
-  width: 100%;
-  background: no-repeat url('https://media.giphy.com/media/NXp9HM6YeuS0U/giphy.gif');
-  
-}
 
 
 @media (max-width: 800px) {
@@ -48,9 +42,11 @@ h1 a {
     left: 40px;
   }
 
-
-  .container {
-    width: 400px;
+  .gif {
+    width: 60%;
+    height: auto;
   }
+
+  
 
  }
