--- a/public/css/custom/projects.css
+++ b/public/css/custom/projects.css
@@ -10,3 +10,11 @@
   justify-content: center;
 }
 
+.project-container {
+  margin: 0 18.75px;
+}
+
+.card {
+  border-radius: 15px !important;
+  overflow: hidden;
+}
