--- a/public/css/custom/contact.css
+++ b/public/css/custom/contact.css
@@ -9,6 +9,11 @@
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-bottom: -50px;
+  position: relative;
+  z-index: 1;
+  height: 100px;
+  border-radius: 15px;
   
 }
 
@@ -21,4 +26,17 @@
     display: flex;
     justify-content: center;
   }
+}
+
+.contact-btn {
+  border-radius: 20px;
+  background-color: #324B4F;
+  border: 2px solid var(--main-color);
+  box-shadow: none;
+  color: var(--main-color);
+}
+
+.contact-btn:hover {
+  background-color: var(--main-color);
+  color: white;
 }
