media queries added, not fully responsive yet

--- a/public/css/custom/navbar.css
+++ b/public/css/custom/navbar.css
@@ -16,12 +16,17 @@ nav {
   font-family: 'Montserrat', sans-serif;
 }
 
-/* #nav-mobile > li:nth-child(2) > a {
+#nav-mobile > li:nth-child(3) > a {
   border-radius: 20px;
   background-color: white;
   border: 2px solid var(--main-color);
   box-shadow: none;
-} */
+}
+
+#nav-mobile > li:nth-child(3) > a:hover {
+  background-color: var(--main-color);
+  color: white !important;
+}
 
 a.brand-logo {
   margin-left: 20px;
