--- a/public/css/custom/contact.css
+++ b/public/css/custom/contact.css
@@ -9,11 +9,12 @@
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-bottom: -50px;
+  margin-bottom: -80px;
   position: relative;
   z-index: 1;
-  height: 100px;
+  height: 160px;
   border-radius: 15px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
   
 }
 
@@ -29,7 +30,7 @@
 }
 
 .contact-btn {
-  border-radius: 20px;
+  border-radius: 40px;
   background-color: #324B4F;
   border: 2px solid var(--main-color);
   box-shadow: none;
@@ -39,4 +40,28 @@
 .contact-btn:hover {
   background-color: var(--main-color);
   color: white;
+}
+
+.contact-container > span:nth-child(1) > p {
+  font-size: 3em;
+  margin: 0 !important;
+  line-height: 1em;
+}
+
+@media (max-width: 1060px) { 
+  .contact-container {
+    height: 240px;
+    flex-direction: column;
+    margin-bottom: -120px;
+    padding: 10px;
+
+  }
+}
+@media (max-width: 601px) { 
+  .contact-container {
+    height: 240px;
+    margin-bottom: -120px;
+    padding: 10px;
+
+  }
 }
