--- a/public/css/custom/footer.css
+++ b/public/css/custom/footer.css
@@ -2,5 +2,14 @@
 
 .page-footer {
   background-color: var(--main-color) !important;
-  padding-top: 100px;
+  padding-top: 170px;
+}
+
+span i {
+  padding: 10px;
+  margin-top: 20px;
+}
+
+#logo-footer {
+  color: white;
 }
