--- a/public/css/custom/presentation-skills.css
+++ b/public/css/custom/presentation-skills.css
@@ -24,8 +24,14 @@ div.presentation-section > div > p {
 }
 .row-skill-container {
   margin: 0 30px;
-  
+  border-radius: 15px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
+
+.row-skill-container > .row {
+  margin-bottom: 0 !important;
+}
+
 
 body > div.skills-section > div.row-skill-container > div > div:nth-child(1) {
   border-top-left-radius: 15px;
@@ -33,8 +39,8 @@ body > div.skills-section > div.row-skill-container > div > div:nth-child(1) {
 }
 
 body > div.skills-section > div.row-skill-container > div > div:nth-child(2) {
-  border-right: none;
-  border-left: none;
+  border-right: 1px solid lightgrey;
+  border-left: 1px solid lightgrey;
 }
 
 body > div.skills-section > div.row-skill-container > div > div:nth-child(3) {
@@ -43,9 +49,9 @@ body > div.skills-section > div.row-skill-container > div > div:nth-child(3) {
 }
 
 .skill-container {
-  border: 1px solid lightgrey;
   background-color: white;
 }
+
 
 .skill-icon-container {
   display: flex;
@@ -66,7 +72,46 @@ div.content-col >  div.sub-section-col > .subtitle-col {
 }
 
 
-.btn-container {
+.btn-container-presentation {
   display: flex;
   justify-content: center;
+}
+.btn-container > .presentation-btn {
+    border-radius: 20px;
+    background-color: var(--main-color);
+    border: 2px solid white;
+    box-shadow: none;
+    color: white;
+}
+
+.btn-container > .presentation-btn:hover {
+  background-color: white;
+}
+
+.presentation-title {
+  margin-bottom: 30px;
+}
+
+
+@media (max-width: 601px) { 
+  .presentation-section {
+    height: 750px;
+  }
+
+  body > div.skills-section > div.row-skill-container > div > div:nth-child(1) {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+
+  body > div.skills-section > div.row-skill-container > div > div:nth-child(3) {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+
+  body > div.skills-section > div.row-skill-container > div > div:nth-child(2) {
+    border-right: none;
+    border-left: none;
+    border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+  }
 }
