--- a/public/css/custom/projects.css
+++ b/public/css/custom/projects.css
@@ -1,9 +1,27 @@
 @import '../custom/var.css';
 
-.card-reaveal-btn-container {
-  display: flex;
-  justify-content: center;
+
+.aaa {
+  display: none;
+  position: absolute;
+  top: 45%; left: 43%;
+  z-index: 1;
 }
+
+.card .card-image {
+  
+position: relative;
+ z-index: 10;
+ opacity: 1;
+ transition: .5s ease;
+ background-color: rgba(0, 0, 0, 0.945);
+
+}
+
+.card:hover .card-image {
+  opacity: 0.65;
+}
+
 
 .btn-container {
   display: flex;
@@ -19,6 +37,7 @@
 .card {
   border-radius: 15px !important;
   overflow: hidden;
+  position: relative;
 }
 
 .projects-title {
