--- a/public/css/custom/footer.css
+++ b/public/css/custom/footer.css
@@ -13,3 +13,7 @@ span i {
 #logo-footer {
   color: white;
 }
+
+#footer > footer > div.container > div > div > span > a{
+  color: white !important;
+}
