--- a/public/css/custom/projects.css
+++ b/public/css/custom/projects.css
@@ -44,6 +44,13 @@
 @media (max-width: 601px) { 
   .project-container {
     height: 950px;
+    margin-bottom: 150px !important;
+  }
+}
+@media (max-width: 451px) { 
+  .project-container {
+    height: 950px;
+    margin-bottom: 50px !important;
   }
 }
 
