--- a/public/css/custom/footer.css
+++ b/public/css/custom/footer.css
@@ -14,6 +14,8 @@ span i {
   color: white;
 }
 
-#footer > footer > div.container > div > div > span > a{
+body > footer > div.container > div > div > span > a{
   color: white !important;
 }
+  
+
