--- a/public/css/custom/presentation-skills.css
+++ b/public/css/custom/presentation-skills.css
@@ -34,17 +34,17 @@ div.presentation-section > div > p {
 }
 
 
-#body > div.skills-section > div > div > div:nth-child(1) {
+body > div.skills-section > div > div > div:nth-child(1) {
   border-top-left-radius: 15px !important;
   border-bottom-left-radius: 15px !important;
 }
 
-#body > div.skills-section > div > div > div:nth-child(2) {
+body > div.skills-section > div > div > div:nth-child(2) {
   border-right: 1px solid lightgrey;
   border-left: 1px solid lightgrey;
 }
 
-#body > div.skills-section > div > div > div:nth-child(3) {
+body > div.skills-section > div > div > div:nth-child(3) {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
@@ -59,9 +59,12 @@ div.presentation-section > div > p {
   justify-content: center;
 }
 
-#presentation-skills > div.skills-section > div > div > div > div.title-col > h2 {
+body > div.skills-section > div > div > div > div.title-col > h2 {
   color: #324B4F;
+  hyphens: auto;
 }
+  
+
 #presentation-skills > div.skills-section > div > div > div > div.title-col > div > p {
   margin: 37px 0 !important;
 }
@@ -106,20 +109,20 @@ div.content-col >  div.sub-section-col > .subtitle-col {
     height: 750px;
   }
 
-  #presentation-skills > div.skills-section > div > div > div:nth-child(1) {
+  body > div.skills-section > div > div > div:nth-child(1) {
     border-top-left-radius: 15px !important;
     border-top-right-radius: 15px !important;
     padding: 25px 0px !important;
   }
   
 
-  #presentation-skills > div.skills-section > div > div > div:nth-child(3) {
+  body > div.skills-section > div > div > div:nth-child(3) {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     padding: 25px 0px !important;
   }
 
-  #presentation-skills > div.skills-section > div > div > div:nth-child(2) {
+  body > div.skills-section > div > div > div:nth-child(2) {
     border-right: none;
     border-left: none;
     border-top: 1px solid lightgrey;
@@ -136,8 +139,4 @@ div.content-col >  div.sub-section-col > .subtitle-col {
 
 .fa-star-half{
   color: var(--main-color);
-}
-
-#presentation-skills > div.skills-section > div > div > div > div.title-col > h2 {
-  hyphens: auto;
 }
